--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "vue": "^2.5.11",
     "vue-axios": "^2.1.3",
