--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.5.11",
     "vue-axios": "^2.1.3",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.13.0",
     "vuex": "^3.0.1"
   },
   "browserslist": [
